# Microcontrollers_TableroLavadora

./: CMakeLists.txt  README.md  conexion_WiFi_Blynk  main.py  melodias.py  test_zumbador.py  uart.c
AnimCiclosLavado/: CMakeLists.txt  README.md  ciclos_anim.c
Blynk/: blynkHandler.py  test_wifi_connection.py
DisplayFases/: CMakeLists.txt  README.md  display_fases.c  display_fasesM.c
LaundryMachineSensors/LaundryMachineSensors/: Sensor_nivel_agua.py  blynk_connection.py  main.py  melodias.py  sensor_Ultrasonic.py
LaundryMachineSensors/LaundryMachineSensors/connectionWifi/: test_wifi_connection.py
LaundryMachineSensors/LaundryMachineSensors/sensor_NivelAgua/: Sensor_nivel_agua.py  test.py
LaundryMachineSensors/LaundryMachineSensors/sensor_Proximidad/: test.py
LaundryMachineSensors/LaundryMachineSensors/sensor_Temp/: test.py
LaundryMachineSensors/LaundryMachineSensors/zumbador/: test_zumbador.py
Lectura Sensor DH11/: README.md  Sensor_nivel_agua.py  Sensor_temperatura_agua.py  blynk_connection.py  testDHT11.py  testSensores.py
PruebaAnimBarrido/: CMakeLists.txt  prueba_anim_barrido.c
Sensor_nivel_agua/: Sensor_nivel_agua.py  test.py
Sensor_temperatura_agua/: Sensor_temperatura_agua.py  test.py
Tablero Lavadora/: CMakeList.txt  boton_nivel_agua.cc  boton_nivel_agua.h  boton_pausa.h  boton_temporizador.h  main.cc
Tablero Lavadora/Uart/: CMakeLists.txt  uart.cc
Tablero Lavadora/boton_Fases/: CMakeLists.txt  boton_fases.cc  boton_fases.h
Tablero Lavadora/boton_InicioPausa/: CMakeLists.txt  boton_InicioPausa.cc  test.cc
Tablero Lavadora/boton_NivelAgua/: CMakeLists.txt  boton_nivel_agua.cc  boton_nivel_agua.h  test.cc
Tablero Lavadora/boton_Temporizador/: CMakeLists.txt  boton_Temporizador.cc  boton_Temporizador.h  test.cc
Tablero Lavadora/boton_TipoCiclos/: boton_TipoCiclo.h  boton_TipoCiclos.cc  test.cc
boton_Fases/: CMakeLists.txt  README.md  boton_fases.cc  boton_fases.h  test.cc
boton_Nivel_agua/: CMakeLists.txt  boton_nivel_agua.cc  boton_nivel_agua.h  prueba2.cc
boton_PlayPause/: CMakeLists.txt  boton_PlayPause.cc
boton_TipoCiclos/: CMakeLists.txt  boton_TipoCiclo.h  boton_TipoCiclos.cc  main.cc
boton_TiposCiclos/: CMakeLists.txt  boton_TipoCiclos.cc
boton_ciclos/: CMakeLists.txt  boton_ciclos.c
boton_encendido/: CMakeLists.txt  boton_encendido.c  boton_encendido.cc  boton_nivel_agua.c  main.cc
boton_inicio/: CMakeLists.txt  boton_inicio.c
boton_modularizado/: boton_nivel_agua.cc  prueba.cc
boton_nivel_agua/: CMakeLists.txt
boton_pausa/: CMakeLists.txt  boton_pausa.cc  boton_pausa.h  main.cc  test.cc
boton_temp/: CMakeLists.txt  boton_temp.cc  boton_temporizador.h  prueba.cc
boton_temporizador/: CMakeLists.txt  boton_temporizador.c
include/: boton_nivel_agua.h  pin_list.h
modu_boton_encendido/: CMakeLists.txt  modu_boton_encendido.cc  modu_boton_encendido.h  test.cc
modu_display4x7/: CMakeLists.txt  modu_display4x7.cc  test.cc
sensor_Proximidad/: sensor_Ultrasonic.py  test.py
sistema_de_barrido/: CMakeLists.txt  sistema_de_barrido.c  sistema_de_barrido.cc
temp4x7/: CMakeLists.txt  boton_temporizador.h  prueba.cc
